[workspace]
resolver = "2"
default-members = ["lib", "full-node"]
members = [
    "lib",
    "full-node",
    "light-base",
    "wasm-node/rust",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
repository = "https://github.com/smol-dot/smoldot"

[profile.dev]
debug = 1    # Default value is `2`, which contains the full debug info. `1` is enough for stack traces.
opt-level = 2
panic = "abort"
[profile.dev.package."*"]
opt-level = 3

# The `test` profile mimics the `dev` profile to avoid recompilations.
[profile.test]
opt-level = 2
[profile.test.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
# codegen-units set to 1 to avoid performance regressions when combined with LTO
# See https://github.com/rust-lang/rust/issues/47745
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
incremental = false
#strip = "symbols"      # TODO: uncomment once stable

[profile.min-size-release]
inherits = "release"
opt-level = "z"
incremental = false
