[package]
name = "smoldot-full-node"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Substrate/Polkadot full node using smoldot"
repository = "https://github.com/smol-dot/smoldot"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
publish = false
default-run = "full-node"

[[bin]]
name = "full-node"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
async-lock = { version = "2.7.0" }
atty = "0.2.14"
blake2-rfc = { version = "0.2.18", default-features = false }
clap = { version = "4.2.5", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "usage"] }  # Note: enabling/disabling some features modifies the internal behavior of clap, be careful
ctrlc = "3.2.5"
derive_more = "0.99.17"
directories = "5.0.1"
either = { version = "1.8.1", default-features = false }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
event-listener = { version = "2.5.3" }
fnv = { version = "1.0.7", default-features = false }
futures-channel = "0.3.27"
futures-executor = { version = "0.3.28", default-features = false, features = ["std", "thread-pool"] }
futures-timer = "3.0"
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.13.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17", default-features = false }
mick-jaeger = "0.1.8"
rand = "0.8.5"
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
smoldot = { version = "0.6.0", path = "../lib", default-features = false, features = ["database-sqlite", "std"] }
terminal_size = "0.2.6"
