[package]
name = "smoldot-full-node"
version = "0.1.0"
description = "Substrate/Polkadot full node using smoldot"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
default-run = "full-node"

[[bin]]
name = "full-node"
path = "src/main.rs"

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
clap = { version = "4.3.2", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "usage"] }  # Note: enabling/disabling some features modifies the internal behavior of clap, be careful
ctrlc = "3.4.0"
derive_more = "0.99.17"
directories = "5.0.1"
either = { version = "1.8.1", default-features = false }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
event-listener = "2.5.3"
fnv = { version = "1.0.7", default-features = false }
futures-channel = "0.3.27"
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.18", default-features = false }
mick-jaeger = "0.1.8"
rand = "0.8.5"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
siphasher = { version = "0.3.10", default-features = false }
smol = "1.3.0"
smoldot = { version = "0.7.0", path = "../lib", default-features = false, features = ["database-sqlite", "std", "wasmtime"] }
terminal_size = "0.2.6"
