[package]
name = "smoldot-light"
version = "0.6.0"
description = "Browser bindings to a light client for Substrate-based blockchains"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[example]]
name = "basic"
required-features = ["std"]

[dependencies]
async-lock = { version = "2.7.0", default-features = false }  # TODO: no-std-ize; this is has been done and is just waiting for a release: https://github.com/smol-rs/event-listener/pull/34
blake2-rfc = { version = "0.2.18", default-features = false }
derive_more = "0.99.17"
either = { version = "1.8.1", default-features = false }
event-listener = { version = "2.5.3" }
fnv = { version = "1.0.7", default-features = false }
futures-channel = { version = "0.3.27", features = ["std", "sink"] }   # TODO: no-std-ize and remove "sink"
futures-util = { version = "0.3.27", default-features = false, features = ["std", "async-await", "async-await-macro", "channel", "sink"] }  # TODO: slim down these features
hashbrown = { version = "0.14.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = "0.10.5"
log = { version = "0.4.18", default-features = false }
lru = { version = "0.10.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc"] }
siphasher = { version = "0.3.10", default-features = false }
slab = { version = "0.4.8", default-features = false }
smoldot = { version = "0.8.0", path = "../lib", default-features = false }

# `std` feature
# Add here the crates that cannot function without the help of the operating system or environment.
parking_lot = { version = "0.12.1", optional = true }
smol = { version = "1.3.0", optional = true }

[features]
default = ["std", "wasmtime"]
std = ["dep:parking_lot", "dep:smol", "smoldot/std"]
wasmtime = ["smoldot/wasmtime"]

[dev-dependencies]
env_logger = "0.10.0"
