[package]
name = "smoldot-light-wasm"
version = "1.0.9"
description = "Browser bindings to a light client for Substrate-based blockchains"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-executor = { version = "1.5.1", default-features = false }
async-task = { version = "4.4.0", default-features = false }
event-listener = { version = "2.5.3" }
fnv = { version = "1.0.7", default-features = false }
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
lazy_static = "1.4.0"
log = { version = "0.4.18", features = ["std"] }
nom = { version = "7.1.3", default-features = false }
pin-project = "1.1.0"
rand = "0.8.5"
slab = { version = "0.4.8", default-features = false }
smoldot = { version = "0.8.0", path = "../../lib", default-features = false }
smoldot-light = { version = "0.6.0", path = "../../light-base", default-features = false }
