[package]
name = "smoldot-light-wasm"
version = "2.0.4"
description = "Browser bindings to a light client for Substrate-based blockchains"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-executor = { version = "1.5.1", default-features = false }
async-task = { version = "4.4.0", default-features = false }
derive_more = "0.99.17"
event-listener = { version = "3.0.0", default-features = false }
fnv = { version = "1.0.7", default-features = false }
futures-lite = { version = "1.13.0", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
log = { version = "0.4.18", features = ["std"] }
nom = { version = "7.1.3", default-features = false }
no-std-net = { version = "0.6.0", default-features = false }
pin-project = "1.1.3"
slab = { version = "0.4.8", default-features = false }
smoldot = { version = "0.12.0", path = "../../lib", default-features = false }
smoldot-light = { version = "0.10.0", path = "../../light-base", default-features = false }
