[package]
name = "smoldot-light-wasm"
version = "2.0.29"
description = "Browser bindings to a light client for Substrate-based blockchains"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true
publish = false

[features]
std = []  # TODO: this `std` feature exists purely in order to bypass weird Cargo behaviour when running `cargo test`

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-lock = { version = "3.0.0", default-features = false }
async-task = { version = "4.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false }
derive_more = "0.99.17"
dlmalloc = { version = "0.2.5", default-features = false, features = ["global"] }
event-listener = { version = "5.3.0", default-features = false }
fnv = { version = "1.0.7", default-features = false }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.27", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
nom = { version = "7.1.3", default-features = false }
pin-project = "1.1.5"
slab = { version = "0.4.8", default-features = false }
smoldot = { version = "0.18.0", path = "../../lib", default-features = false }
smoldot-light = { version = "0.16.0", path = "../../light-base", default-features = false }
